<resources>
    <string name="app_name">QR Scanner</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="scan_again">Scan again</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="delete">Delete</string>
    <string name="about_qr">About Qr</string>
</resources>