<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myMainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/bglayout2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/historyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/about_qr"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/historyImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historySave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/share"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/delete"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>