<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myMainLayout2"
    android:foreground="@drawable/window_dim_shape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    android:foreground="@drawable/window_dim_shape"   -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/scannedTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="QR Info"
            android:textAlignment="center"
            android:textSize="18sp" />

        <CheckedTextView
            android:id="@+id/scannedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bglayout"
            android:padding="10dp"
            android:text="Scanned Text"
            android:textAlignment="center"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/imageQrCode2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveQrCode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/buttons"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareQrCode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:backgroundTint="@color/buttons"
            android:text="@string/share"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanNewQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/buttons"
            android:layout_margin="10dp"
            android:text="@string/scan_again"
            android:textAllCaps="false" />

    </LinearLayout>


</ScrollView>